[gd_scene load_steps=12 format=3 uid="uid://clcqyj1d4dqnp"]

[ext_resource type="Script" path="res://Refactor01/weapons/projectile_01.gd" id="1_kefpb"]
[ext_resource type="Texture2D" uid="uid://dik8wt0fafbyw" path="res://icon.svg" id="1_l0o2m"]
[ext_resource type="Texture2D" uid="uid://co42dsct2gq0c" path="res://Refactor01/VFX/1.png" id="3_82dkr"]
[ext_resource type="Texture2D" uid="uid://cg41msn8iisqu" path="res://Refactor01/VFX/2.png" id="4_uj6nq"]
[ext_resource type="Texture2D" uid="uid://bgav1pfrbfq0a" path="res://Refactor01/VFX/3.png" id="5_8n7ep"]
[ext_resource type="Texture2D" uid="uid://byd32d50jqv6h" path="res://Refactor01/VFX/4.png" id="6_nvy1p"]
[ext_resource type="Texture2D" uid="uid://b3hk2k3hpnb63" path="res://Refactor01/VFX/5.png" id="7_oo402"]
[ext_resource type="Texture2D" uid="uid://c51gfp8ryh01v" path="res://Refactor01/VFX/6.png" id="8_h8qfg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rip4x"]
radius = 79.0253

[sub_resource type="CircleShape2D" id="CircleShape2D_s6k60"]
radius = 63.0079

[sub_resource type="SpriteFrames" id="SpriteFrames_bsci2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_82dkr")
}, {
"duration": 1.0,
"texture": ExtResource("4_uj6nq")
}, {
"duration": 1.0,
"texture": ExtResource("5_8n7ep")
}, {
"duration": 1.0,
"texture": ExtResource("6_nvy1p")
}, {
"duration": 1.0,
"texture": ExtResource("7_oo402")
}, {
"duration": 1.0,
"texture": ExtResource("8_h8qfg")
}],
"loop": false,
"name": &"impact",
"speed": 30.0
}]

[node name="projectile_01" type="RigidBody2D" node_paths=PackedStringArray("die_timer", "impact_vfx", "my_sprite")]
collision_layer = 8
mass = 0.01
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_kefpb")
die_timer = NodePath("die_timer")
impact_vfx = NodePath("impact_vfx")
my_sprite = NodePath("Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.66, 0.66)
shape = SubResource("CircleShape2D_rip4x")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.66, 0.66)
texture = ExtResource("1_l0o2m")

[node name="projectile_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile_trigger"]
shape = SubResource("CircleShape2D_s6k60")

[node name="die_timer" type="Timer" parent="."]

[node name="impact_vfx" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, 13)
scale = Vector2(0.33, 0.33)
sprite_frames = SubResource("SpriteFrames_bsci2")
animation = &"impact"
frame = 5
frame_progress = 1.0

[connection signal="body_entered" from="projectile_trigger" to="." method="_on_projectile_trigger_body_entered"]
[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
[connection signal="animation_finished" from="impact_vfx" to="." method="_on_impact_vfx_animation_finished"]
